[package]
name = "backroll_test"
version = "0.1.0"
authors = ["Srayan Jana <valorzard.kiko@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backroll = { git="https://github.com/HouraiTeahouse/backroll-rs", branch="main" }
backroll_transport_udp = { git="https://github.com/HouraiTeahouse/backroll-rs", branch="main" }
macroquad = "0.3.4"
tracing-subscriber = "0.2.18"
bitflags = "1.2.1"
bevy_tasks = "0.5.0"
bytemuck = {version = "1.5.1", features = ["derive"]}
clap = "2.33.3"